# presentar

./: .clippy.toml  .dvcignore  .env.example  .envrc  .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pre-commit-config.yaml  .tool-versions  BUILD_MANIFEST.json  Brewfile  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  Pipfile  README.md  STATISTICS.md  conftest.py  contracts  coverage.json  deny.toml  docker-bake.hcl  docker-compose.yml  dvc.yaml  flake.nix  justfile  mlflow.yaml  models.dvc  package.json  params.yaml  proptest.toml  pyproject.toml  requirements.txt  rust-toolchain.toml  setup.py
crates/presentar/: Cargo.toml
crates/presentar-cli/: Cargo.toml  build.rs
crates/presentar-cli/src/: main.rs
crates/presentar-core/: Cargo.toml  build.rs
crates/presentar-core/benches/: benchmarks.rs  compute_blocks.rs  layout.rs
crates/presentar-core/contracts/: color-wcag-v1.yaml  constraints-layout-v1.yaml  rect-geometry-v1.yaml
crates/presentar-core/examples/: hello_widget.rs
crates/presentar-core/src/: accessibility.rs  animation.rs  binding.rs  binding_tests.rs  brick_types.rs  brick_widget.rs  cache.rs  canvas.rs  chart.rs  chart_tests.rs  clipboard.rs  color.rs  constraints.rs  diff.rs  dnd.rs  draw.rs  event.rs  generated_contracts.rs  geometry.rs  gesture.rs  history.rs  lib.rs  lifecycle.rs  runtime.rs  runtime_tests.rs  shortcut.rs  simd.rs  state.rs  streaming.rs  theme.rs  validation.rs  virtualization.rs  widget.rs
crates/presentar-core/tests/: integration.rs
crates/presentar-layout/: Cargo.toml
crates/presentar-layout/benches/: layout.rs
crates/presentar-layout/src/: cache.rs  compute_block.rs  engine.rs  flex.rs  grid.rs  lib.rs
crates/presentar-layout/tests/: integration.rs
crates/presentar-terminal/: .pmat-gates.toml  Cargo.toml  build.rs
crates/presentar-terminal/.pmat/: project.toml
crates/presentar-terminal/__pixel_baselines__/: ptop_120x40_deterministic.txt
crates/presentar-terminal/benches/: terminal.rs
crates/presentar-terminal/examples/: batch_progress.rs  cluster_status.rs  cpu_monitor.rs  direct_benchmark.rs  direct_canvas_demo.rs  gpu_compute.rs  inference_server.rs  memory_monitor.rs  ml_visualization.rs  network_traffic.rs  ptop.yaml  queue_monitor.rs  sensor_dashboard.rs  system_dashboard.rs  test_connections.rs  test_display_rules.rs  training_metrics.rs  ttop_cpu_pane.rs
crates/presentar-terminal/src/: app.rs  app_tests.rs  cli.rs  color.rs  compute_block.rs  compute_block_tests.rs  error.rs  input.rs  lib.rs  perf_trace.rs  random_seed.rs  seed.rs  theme.rs
crates/presentar-terminal/src/direct/: cell_buffer.rs  diff_renderer.rs  direct_canvas.rs  mod.rs
crates/presentar-terminal/src/perf_trace/: analysis.rs  core.rs  data_structures.rs  helpers_batch.rs  helpers_infra.rs  mod.rs  trackers.rs
crates/presentar-terminal/src/perf_trace_tests/: part1.rs  part10.rs  part11.rs  part12.rs  part13.rs  part14.rs  part15.rs  part2.rs  part3.rs  part4.rs  part5.rs  part6.rs  part7.rs  part8.rs  part9.rs
crates/presentar-terminal/src/ptop/: app.rs  app_tests.rs  config.rs  input.rs  mod.rs  ui.rs  ui_atoms.rs  ui_v2.rs  v2_sketch.rs
crates/presentar-terminal/src/tools/: bench.rs  color_diff.rs  mod.rs  tui_compare.rs
crates/presentar-terminal/src/widgets/: battery_panel.rs  border.rs  box_plot.rs  cluster_plot.rs  collapsible_panel.rs  confusion_matrix.rs  connections_panel.rs  containers_panel.rs  core_stats_dataframe.rs  cpu_exploded.rs  cpu_grid.rs  dataframe.rs  disk_panel.rs  display_rules.rs  (+46 more)
crates/presentar-terminal/tests/: cbtop_visibility.rs  cpu_exploded_async.rs  design_principles_interface.rs  direct_canvas_spec.rs  exploded_view_interface.rs  f001_f020_symbol_rendering.rs  f021_f040_color_system.rs  f041_f060_widget_layout.rs  f061_f075_text_rendering.rs  f076_f085_performance.rs  f086_f100_integration.rs  f101_f115_edge_cases.rs  f116_f120_accessibility.rs  f_ml_widget_tests.rs  falsification_tests.rs  pixel_comparison.rs  pixel_perfect_tests.rs  ptop_app_interface.rs  ptop_panels_interface.rs  ttop_code_parity.rs  ttop_parity_tests.rs  widget_interface_tests.rs
crates/presentar-test/: Cargo.toml
crates/presentar-test-macros/: Cargo.toml
crates/presentar-test-macros/src/: lib.rs
crates/presentar-test-macros/tests/: macro_tests.rs
crates/presentar-test/src/: a11y.rs  a11y_tests.rs  bdd.rs  build.rs  fixture.rs  grade.rs  harness.rs  lib.rs  selector.rs  snapshot.rs  tui.rs
crates/presentar-widgets/: Cargo.toml
crates/presentar-widgets/benches/: widgets.rs
crates/presentar-widgets/src/: button.rs  chart.rs  chart_tests.rs  checkbox.rs  column.rs  container.rs  data_card.rs  data_table.rs  formats.rs  image.rs  lib.rs  list.rs  menu.rs  modal.rs  model_card.rs  progress_bar.rs  radio_group.rs  row.rs  select.rs  slider.rs  stack.rs  tabs.rs  text.rs  text_input.rs  toggle.rs  tooltip.rs
crates/presentar-yaml/: Cargo.toml
crates/presentar-yaml/examples/: validate_prs.rs
crates/presentar-yaml/src/: error.rs  executor.rs  executor_tests.rs  expression.rs  formats.rs  lib.rs  manifest.rs  pacha.rs  scene.rs  scene_tests.rs
crates/presentar-yaml/tests/: examples.rs  integration.rs  prs_examples.rs
crates/presentar/examples/: ald_batch_upload.rs  ald_correlation_heatmap.rs  ald_lineage.rs  apr_ald_display.rs  apr_architecture.rs  apr_size_breakdown.rs  apr_version_history.rs  apr_weight_histograms.rs  brick_computer.rs  cht_area_stacked.rs  cht_boxplot.rs  cht_donut.rs  cht_heatmap_basic.rs  cht_multi_axis.rs  cht_scatter_bubble.rs  cht_sparkline.rs  dashboard.rs  demo_10x_comparison.rs  dsh_alerts.rs  dsh_infrastructure.rs  dsh_performance.rs  dsh_pipeline.rs  dsh_research.rs  edg_a11y_audit.rs  edg_high_cardinality.rs  edg_memory_soak.rs  edg_numeric.rs  edg_rtl.rs  edg_slow_data.rs  edg_theme_switching.rs  edg_unicode.rs  form_inputs.rs  generate_demo_assets.rs  hello_world.rs  showcase_gpu.rs  showcase_shell.rs  visual_demo.rs  yaml_manifest.rs
crates/presentar/src/: lib.rs  webgpu.rs
crates/presentar/tests/: showcase_shell_autocomplete.rs  wasm.rs
(+321 files in other folders)
