[workspace]
resolver = "2"
members = [
    "crates/presentar-core",
    "crates/presentar-widgets",
    "crates/presentar-layout",
    "crates/presentar-yaml",
    "crates/presentar-test",
    "crates/presentar",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pragmatic AI Labs"]
license = "MIT"
repository = "https://github.com/paiml/presentar"
rust-version = "1.75"

[workspace.dependencies]
# Sovereign Stack
trueno = "0.7.3"
trueno-viz = "0.1.1"

# Internal crates
presentar-core = { path = "crates/presentar-core" }
presentar-widgets = { path = "crates/presentar-widgets" }
presentar-layout = { path = "crates/presentar-layout" }
presentar-yaml = { path = "crates/presentar-yaml" }
presentar-test = { path = "crates/presentar-test" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Testing
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "deny"
# High-value lint categories per pmat recommendations
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# High-value categories
nursery = { level = "warn", priority = -1 }
# Security-focused
unwrap_used = "warn"
expect_used = "allow"  # expect with message is OK
# Allow common pedantic lints that are too noisy
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
float_cmp = "allow"
similar_names = "allow"
return_self_not_must_use = "allow"
unused_self = "allow"
# Nursery lints that are too noisy
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
# Cargo metadata warnings
cargo_common_metadata = "allow"
