[package]
name = "presentar-core"
description = "Core types and traits for Presentar UI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
trueno = { workspace = true, optional = true }
# Brick Architecture: Tests define interface (PROBAR-SPEC-009)
jugar-probar = { path = "/home/noah/src/probar/crates/probar", default-features = false, optional = true }

[features]
# PROBAR-SPEC-009: Brick Architecture is MANDATORY, not optional
# All widgets MUST implement Brick trait - tests define interface
default = ["simd", "brick"]
simd = ["dep:trueno"]
brick = ["dep:jugar-probar"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "layout"
harness = false

[lints]
workspace = true
