[package]
name = "presentar-terminal"
description = "Terminal backend for Presentar UI framework with zero-allocation rendering"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal crates
presentar-core = { workspace = true }

# Terminal rendering (direct crossterm backend)
crossterm = "0.28"

# Zero-allocation cell buffer (PROBAR-SPEC-009 compliant)
compact_str = "0.8"
bitvec = "1.0"
unicode-width = "0.2"
unicode-segmentation = "1.12"

# Error handling
thiserror = "2.0"

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
