[package]
name = "presentar-test"
description = "Testing harness for Presentar applications"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
presentar-core = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
