[package]
name = "presentar-widgets"
description = "Widget implementations for Presentar UI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["all-widgets"]
all-widgets = ["data-widgets", "input-widgets", "layout-widgets"]
data-widgets = []      # Chart, DataCard, DataTable, ModelCard
input-widgets = []     # Button, Checkbox, Select, Slider, TextInput, Toggle
layout-widgets = []    # Column, Row, Stack, Container, Tabs

[dependencies]
presentar-core = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "widgets"
harness = false

[lints]
workspace = true
