[package]
name = "presentar-yaml"
description = "YAML manifest parser for Presentar UI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
presentar-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
