[package]
name = "presentar"
description = "WASM-first visualization and rapid application framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
include = ["src/**/*", "assets/**/*", "Cargo.toml"]

[dependencies]
presentar-core = { workspace = true }
presentar-widgets = { workspace = true }
presentar-layout = { workspace = true }
presentar-yaml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
rmp-serde = "1.3"
bincode = "1.3"
zstd = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
presentar-test = { workspace = true }
sha2 = "0.10"
hex = "0.4"
regex = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
